@@ -56,7 +56,7 @@ You can also look for information at:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 1999-2015 Duncan Ferguson
+Copyright (C) 1999-2016 Duncan Ferguson
 
 This program is free software; you can redistribute it and/or modify it under the terms of either: the GNU General Public License as published by the Free Software Foundation; or the Artistic License.
 
